Revert "update elm runtime url"
This reverts commit 34fd7c2b4df4c7b8c71728cca3c9554b067f9785.

--- a/a.html
+++ b/a.html
@@ -2,7 +2,7 @@
 <html><head><meta charset="UTF-8"><title>Compiled Elm</title><style type="text/css">a:link {text-decoration: none; color: rgb(15,102,230);}
 a:visited {text-decoration: none}
 a:active {text-decoration: none}
-a:hover {text-decoration: underline; color: rgb(234,21,122);}</style></head><body><script type="text/javascript" src="https://elm-lang.org/elm-runtime.js"></script><script type="text/javascript">Elm.Main = Elm.Main || {};
+a:hover {text-decoration: underline; color: rgb(234,21,122);}</style></head><body><script type="text/javascript" src="http://elm-lang.org/elm-runtime.js"></script><script type="text/javascript">Elm.Main = Elm.Main || {};
 Elm.Main.make = function (_elm)
                 {
                   "use strict";
